--- a/src/styles/AppStyle.css
+++ b/src/styles/AppStyle.css
@@ -21,5 +21,5 @@
 }
 
 .space-divider {
-  margin: 0 10px;
+  margin: 10px;
 }
